--- a/force-app/test/default/classes/SummitEventsContactMatching_TEST.cls
+++ b/force-app/test/default/classes/SummitEventsContactMatching_TEST.cls
@@ -82,4 +82,43 @@ public class SummitEventsContactMatching_TEST {
             Test.stopTest();
         }
     }
+    
+    @IsTest
+    static void SummitEventsLeadMatching1(){
+        List<Summit_Events_Instance__c> seaTestInstances = SummitEventsTestSharedDataFactory.createTestEvent();
+        Summit_Events_Registration__c seaTestRegistration = SummitEventsTestSharedDataFactory.createEventRegistration(seaTestInstances[1], 'Test', 'Record', 'test@example.com', '55555', '1971-03-22', '2012', null);
+        Summit_Events__c seaTestEvent = SummitEventsTestSharedDataFactory.getEventRecord(seaTestInstances[1].Event__c);
+        seaTestEvent.Contact_Matching_No_Match_Behavior__c = null;
+        seaTestEvent.Lead_Matching_Rules__c = 'Use Salesforce Duplicate Rule';
+        seaTestEvent.Lead_Creation_Duplicate_Rule__c = 'Standard Lead Duplicate Rule';
+        seaTestEvent.Lead_Matching_No_Match_Behavior__c = 'Create Lead';
+        seaTestEvent.Lead_Matching_Multiple_Match_Behavior__c = 'Match with most recently modified';
+        seaTestEvent.Custom_Metadata_Lead_Matching_Method__c = 'Red';
+        update seaTestEvent;
+        User testUser = SummitEventsTestSharedDataFactory.userToRunWith('Standard User','Summit_Events_Admin');
+        System.runAs(testUser) {
+            Test.startTest();
+            seaTestRegistration.Status__c = 'Registered';
+            seaTestRegistration.Registrant_Preferred_First_Name__c = 'Big T';
+            update seaTestRegistration;
+            
+            seaTestRegistration.Lead__c = null;
+            update seaTestRegistration;
+            
+            Lead l = new Lead();
+            l.FirstName = 'Test';
+            l.LastName = 'Record';
+            l.Email = 'test@example.com';
+            l.Company = 'Big T Record';
+            Database.DMLOptions dml = new Database.DMLOptions();
+            dml.DuplicateRuleHeader.allowSave = true;
+            dml.DuplicateRuleHeader.runAsCurrentUser = true; 
+            Database.SaveResult sr = Database.insert(l, dml); 
+            
+            seaTestRegistration.Lead__c = null;
+            update seaTestRegistration;
+            
+            Test.stopTest();
+        }
+    }
 }
